--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,16 @@
-<div class="container marketing main-content">
-  <div class="row">
-      <div class="col-lg-4" appNavColor>
-          <h2 class="for-testing">Our Goals</h2>
-          <p>
-            Our main purpose is to help student and lecturers with this system.
-          </p>
+<header class="masthead text-center text-white d-flex">
+  <div class="container my-auto">
+    <div class="row">
+      <div class="col-lg-10 mx-auto">
+        <h1 class="text-uppercase">
+          <strong>Your Favorite System for checking your courses!</strong>
+        </h1>
+        <hr>
       </div>
-</div>
+      <div class="col-lg-8 mx-auto">
+        <p class="text-faded mb-5">University System can help you be a better student!</p>
+        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+      </div>
+    </div>
+  </div>
+</header>
