--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -1,28 +1,49 @@
-<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-  <div class="container">
-    <a class="navbar-brand js-scroll-trigger" [routerLink]="['/home']">Home</a>
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarResponsive">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item" *ngIf="!isUserLogged">
-          <a class="nav-link" [routerLink]="[ '/register'] ">
-            <i class="fa fa-user-plus" aria-hidden="true"></i>
-            <span class="nav-link-text ">
-               Register
-            </span>
-          </a>
-        </li>
-        <li class="nav-item" *ngIf="!isUserLogged">
-          <a class="nav-link" [routerLink]="[ '/login'] ">
-            <i class="fa fa-user-plus" aria-hidden="true"></i>
-            <span class="nav-link-text ">
-               Login
-            </span>
-          </a>
-        </li>
-      </ul>
+<nav class="navbar navbar-toggleable-xs navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav navbar-sidenav mr-auto" id="exampleAccordion">
+            <li class=" nav-item">
+                <a class="nav-link" [routerLink]="[ '/home'] ">
+                    <i class="fa fa-home"></i>
+                    <span class="nav-link-text ">
+                        Home
+                    </span>
+                </a>
+            </li>
+        </ul>
+        <ul class="navbar-nav navbar-sidenav ml-auto" id="exampleAccordion">
+            <li *ngIf="isUserLogged" class="nav-item">
+                <a class="nav-link" [routerLink]="[ '/profile'] ">
+                    <img src="{{profilePictureUrl}}" alt="pic" class="profile-pic-small img-responsive rounded"> {{username}}
+                    <span class="nav-link-text "></span>
+                </a>
+            </li>
+            <li *ngIf="!isUserLogged" class="nav-item ">
+                <a class="nav-link" [routerLink]="[ '/register'] ">
+                    <i class="fa fa-user-plus" aria-hidden="true"></i>
+                    <span class="nav-link-text ">
+                        Register
+                    </span>
+                </a>
+            </li>
+            <li *ngIf="!isUserLogged" class="nav-item">
+                <a class="nav-link" [routerLink]="[ '/login'] ">
+                    <i class="fa fa-sign-in" aria-hidden="true"></i>
+                    <span class="nav-link-text ">
+                        Login
+                    </span>
+                </a>
+            </li>
+            <li *ngIf="isUserLogged" class="nav-item dropdown">
+                <a class="nav-link" id="navbarDropdown1" data-target="#" href="http://example.com" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <i class="fa fa-user-circle-o" aria-hidden="true"></i> Profile
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
+                        <li><a class="dropdown-item" [routerLink]="['/user/edit']">Edit Profile</a></li>
+                        <li>
+                            <a class="dropdown-item" [routerLink]="[ '/logout'] ">Logout</a>
+                        </li>
+                    </ul>
+                </a>
+            </li>
+        </ul>
     </div>
-  </div>
 </nav>
