--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -18,7 +18,7 @@
                 </a>
             </li>
             <li *ngIf="!isUserLogged" class="nav-item ">
-                <a class="nav-link" [routerLink]="[ '/register'] ">
+                <a class="nav-link" [routerLink]="[ '/auth/register'] ">
                     <i class="fa fa-user-plus" aria-hidden="true"></i>
                     <span class="nav-link-text ">
                         Register
