--- a/src/app/authentication/register/register.component.html
+++ b/src/app/authentication/register/register.component.html
@@ -21,7 +21,10 @@
 
                             <div class="col-md-10">
                                 <span
-                                   *ngIf="userForm.controls['username'].errors">
+                                   *ngIf="(userForm.controls['username'].errors &&
+                                          (userForm.controls['username'].dirty  ||
+                                           userForm.controls['username'].touched)) ||
+                                           userForm.controls['username'].errors && mouseover">
                                        Please enter valid username
                                 </span>
                            </div>
@@ -42,7 +45,10 @@
 
                             <div class="col-md-10">
                                 <span
-                                   *ngIf="userForm.controls['firstName'].errors">
+                                   *ngIf="(userForm.controls['firstName'].errors &&
+                                          (userForm.controls['firstName'].dirty  ||
+                                          userForm.controls['firstName'].touched)) ||
+                                          userForm.controls['firstName'].errors && mouseover">
                                        Please enter valid first name
                                 </span>
                            </div>
@@ -63,7 +69,10 @@
 
                             <div class="col-md-10">
                                 <span
-                                   *ngIf="userForm.controls['lastName'].errors">
+                                   *ngIf="(userForm.controls['lastName'].errors &&
+                                          (userForm.controls['lastName'].dirty  ||
+                                          userForm.controls['lastName'].touched)) ||
+                                          userForm.controls['lastName'].errors && mouseover">
                                        Please enter valid last name
                                 </span>
                            </div>
@@ -84,7 +93,10 @@
 
                             <div class="col-md-10">
                                 <span
-                                   *ngIf="userForm.controls['email'].errors">
+                                   *ngIf="(userForm.controls['email'].errors &&
+                                          (userForm.controls['email'].dirty  ||
+                                          userForm.controls['email'].touched)) ||
+                                          userForm.controls['email'].errors && mouseover">
                                        Please enter valid email
                                 </span>
                            </div>
@@ -105,7 +117,10 @@
 
                             <div class="col-md-10">
                                 <span
-                                   *ngIf="userForm.controls['password'].errors">
+                                   *ngIf="(userForm.controls['password'].errors &&
+                                          (userForm.controls['password'].dirty  ||
+                                          userForm.controls['password'].touched)) ||
+                                          userForm.controls['password'].errors && mouseover">
                                        Please enter valid password
                                 </span>
                            </div>
@@ -122,7 +137,7 @@
 
                         <input
                            class="btn btn-lg btn-primary btn-block"
-                          [disabled]="!userForm.valid" value="Sign Me Up" type="submit">
+                          [disabled]="!userForm.valid" value="Register" type="submit">
                     </form>
                 </div>
             </div>
