--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -26,7 +26,7 @@
                 </a>
             </li>
             <li *ngIf="!isUserLogged" class="nav-item">
-                <a class="nav-link" [routerLink]="[ '/login'] ">
+                <a class="nav-link" [routerLink]="[ '/auth/login'] ">
                     <i class="fa fa-sign-in" aria-hidden="true"></i>
                     <span class="nav-link-text ">
                         Login
