Added background image for login and register

--- a/src/app/authentication/register/register.component.css
+++ b/src/app/authentication/register/register.component.css
@@ -1,5 +1,15 @@
 main {
-  margin-top: 7%;
+  margin-top: 3%;
+  padding-top: 10rem;
+  padding-bottom: 32rem;
+  background-image: url("../../../assets/imgs/subscribe-3096723_1280.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 .input-group span {
