--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,10 @@
 body,
 html {
   width: 100%;
-  height: 100%;
+  height: 80%;
 }
 
 body {
   font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif;
+  overflow:hidden;
 }
