--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -10,6 +10,7 @@
                 </a>
             </li>
         </ul>
+
         <ul class="navbar-nav navbar-sidenav ml-auto" id="exampleAccordion">
             <li *ngIf="isUserLogged" class="nav-item">
                 <a class="nav-link" [routerLink]="[ '/users/profile'] ">
@@ -19,6 +20,7 @@
                     <span class="nav-link-text "></span>
                 </a>
             </li>
+
             <li *ngIf="!isUserLogged" class="nav-item ">
                 <a class="nav-link" [routerLink]="[ '/auth/register'] ">
                     <i class="fa fa-user-plus" aria-hidden="true"></i>
@@ -27,6 +29,7 @@
                     </span>
                 </a>
             </li>
+
             <li *ngIf="!isUserLogged" class="nav-item">
                 <a class="nav-link" [routerLink]="[ '/auth/login'] ">
                     <i class="fa fa-sign-in" aria-hidden="true"></i>
@@ -35,15 +38,23 @@
                     </span>
                 </a>
             </li>
+
             <li *ngIf="isUserLogged" class="nav-item dropdown">
-                    <i class="fa fa-user-circle-o" aria-hidden="true"></i>
-                    <button class="btn btn-outline-primary"
-                    id="dropdownBasic1" ngbDropdownToggle>Profile</button>
-                    <ul> ngbDropdownMenu aria-labelledby="dropdownBasic1">
-                        <button class="dropdown-item">Action - 1</button>
-                        <button class="dropdown-item">Another Action</button>
-                        <button class="dropdown-item">Something else is here</button>
-                   </ul>>
+                <a class="nav-link" id="navbarDropdown1" data-target="#"
+                    href="http://example.com" data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
+                    <i class="fa fa-user-circle-o" aria-hidden="true"></i> Profile
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
+                      <li>
+                        <a class="dropdown-item" [routerLink]="['/user/edit']">Edit Profile
+                        </a>
+                      </li>
+                      <li>
+                          <a class="dropdown-item" [routerLink]="[ '/auth/logout'] ">Logout
+                          </a>
+                      </li>
+                    </ul>
+                </a>
             </li>
         </ul>
     </div>
