Added users-all component

--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -13,7 +13,7 @@
 
         <ul class="navbar-nav navbar-sidenav ml-auto" id="exampleAccordion">
             <li *ngIf="isUserLogged" class="nav-item">
-                <a class="nav-link" [routerLink]="[ '/users/profile'] ">
+                <a class="nav-link">
                     <img src="{{profilePictureUrl}}"
                          alt="pic"
                          class="profile-pic-small img-responsive rounded"> {{username}}
