Added user-detail component

--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -9,6 +9,14 @@
                     </span>
                 </a>
             </li>
+            <li class=" nav-item">
+                <a class="nav-link" [routerLink]="[ '/user/all'] ">
+                    <i class="fa fa-home"></i>
+                    <span class="nav-link-text ">
+                        Users
+                    </span>
+                </a>
+            </li>
         </ul>
 
         <ul class="navbar-nav navbar-sidenav ml-auto" id="exampleAccordion">
