--- a/src/app/users/users-all/users-all.component.html
+++ b/src/app/users/users-all/users-all.component.html
@@ -1,3 +1,27 @@
-<p>
-  users-all works!
-</p>
+<div class="container">
+    <main>
+        <section class="row-section">
+            <div class="container">
+                <div class="row">
+                    <h1 class="text-center">
+                        <i class="fa fa-user fa-2x" aria-hidden="true"></i> Users
+                    </h1>
+                </div>
+                <div class="col-md-10 offset-md-1 row-block">
+                    <ul>
+                        <li *ngFor="let user of users | paginate: {
+                          itemsPerPage: pageSize,
+                          currentPage: currentPageNumber
+                        }">
+                        <app-user-detail [user]="user"></app-user-detail>
+                        </li>
+                    </ul>
+
+                    <pagination-controls
+                        (pageChange)="currentPageNumber = $event">
+                    </pagination-controls>
+                </div>
+            </div>
+        </section>
+   </main>
+</div>
