--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -9,6 +9,7 @@
                     </span>
                 </a>
             </li>
+
             <li class=" nav-item">
                 <a class="nav-link" [routerLink]="[ '/user/all'] ">
                     <i class="fa fa-home"></i>
@@ -16,6 +17,15 @@
                         Users
                     </span>
                 </a>
+            </li>
+
+            <li *ngIf="isUserAdmin" class="nav-item">
+              <a class="nav-link" [routerLink]="[ '/admin/add'] ">
+                <i class="fa fa-user"></i>
+                <span class="nav-link-text ">
+                    Add Moderator
+                </span>
+              </a>
             </li>
         </ul>
 
