--- a/src/app/admin/moderator-details/moderator-details.component.css
+++ b/src/app/admin/moderator-details/moderator-details.component.css
@@ -1,5 +1,5 @@
 .media {
-  border: 1px solid #d5dbdd;
+  border: 3px solid #d5dbdd;
   padding: 5px 20px;
   border-radius: 5px;
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.04);
@@ -16,10 +16,39 @@
 }
 
 .media .media-body h4 {
-  color: #6b456a;
+  color: red;
   font-size: 18px;
   font-weight: 600;
   margin-bottom: 0;
-  padding-left: 14px;
+  margin-right: 150px;
+  padding-left: 5px;
   margin-top: 12px;
+}
+
+.media .media-body p {
+  color: royalblue;
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 0;
+  margin-right: 120px;
+  padding-left: 5px;
+  margin-top: 12px;
+}
+
+.btn-warning {
+  position: relative;
+  color: white;
+  background-color: orange;
+  width: 100px;
+  margin-left: 400px;
+  margin-bottom: 30px;
+}
+
+.btn-danger {
+  position: relative;
+  color: white;
+  background-color: red;
+  width: 100px;
+  margin-left: 400px;
+  margin-bottom: 30px;
 }
