--- a/src/app/admin/moderator-details/moderator-details.component.html
+++ b/src/app/admin/moderator-details/moderator-details.component.html
@@ -3,8 +3,12 @@
       <img class="rounded-circle" src="{{moderator.profilePictureUrl}}">
   </div>
   <div class="media-body">
-      <h4>{{moderator.username}}</h4>
-      <p>{{moderator | fullName}}</p>
-      <p>{{moderator.email}}</p>
+      <h4 class="text-center">Username: {{moderator.username}}</h4>
+      <br>
+      <p class="text-center">Full name: {{moderator | fullName}}</p>
+      <p class="text-center">Email: {{moderator.email}}</p>
+
+      <input class="btn btn-lg btn-warning btn-link" value="Edit" type="submit">
+      <input class="btn btn-lg btn-danger btn-link" value="Delete" type="submit">
   </div>
 </div>
