Added add-homework-to-course component

--- a/src/app/shared/components/course-detail/course-detail.component.html
+++ b/src/app/shared/components/course-detail/course-detail.component.html
@@ -17,5 +17,8 @@
              class="btn btn-lg btn-warning btn-link" value="Add mark for the student" type="submit">
         </li>
       </ul>
+
+      <input [routerLink]="['/student/homeworks', course.id]"
+             class="btn btn-lg btn-warning btn-link" value="Add Homework" type="submit">
   </div>
 </div>
