--- a/src/app/shared/components/course-detail/course-detail.component.html
+++ b/src/app/shared/components/course-detail/course-detail.component.html
@@ -5,6 +5,26 @@
       <p class="text-center">Credits: {{course.credits}}</p>
       <p class="text-center">Max places in course: {{course.maxPlacesInCourse}}</p>
 
+      <div *ngIf="course.comments" class="comments-container-div">
+          <div class="comments-container">
+              <h3>Comments:</h3>
+              <ul id="comments-list" class="comments-list" *ngFor="let comment of course.comments">
+                  <li>
+                      <div class="comment-main-level">
+                          <div class="comment-avatar"><img src="{{comment.authorPictureUrl}}" alt=""></div>
+                          <div class="comment-box">
+                              <div class="comment-head">
+                                  <h6 class="comment-name by-author">{{comment.author}}</h6>
+                                  <i class="fa fa-comment"></i>
+                              </div>
+                              <div class="comment-content">{{comment.text}}</div>
+                          </div>
+                      </div>
+                  </li>
+              </ul>
+          </div>
+      </div>
+
       <input [routerLink]="['/moderator/students', course.id]"
              class="btn btn-lg btn-warning btn-link" value="Add Student" type="submit">
       <input [routerLink]="['/moderator/lecturers', course.id]"
@@ -20,5 +40,47 @@
 
       <input [routerLink]="['/student/homeworks', course.id]"
              class="btn btn-lg btn-warning btn-link" value="Add Homework" type="submit">
+
+
+             <button *ngIf="isUserLogged" class="btn comment-btn"
+                data-toggle="modal" data-target="#myModalHorizontal">Add comment</button>
+
+                <div class="modal fade" id="myModalHorizontal" tabindex="-1" role="dialog"
+                     aria-labelledby="myModalLabel" aria-hidden="true">
+                     <div class="modal-dialog">
+                        <div class="modal-content">
+
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal">
+                                    <span aria-hidden="true">&times;</span>
+                                    <span class="sr-only">Close</span>
+                                </button>
+                                <h4 class="modal-title" id="myModalLabel">
+                                    Commment:
+                                </h4>
+                            </div>
+
+                            <div class="modal-body">
+                                <form class="form-horizontal" role="form">
+                                    <div class="form-group">
+                                        <div class="col-sm-10">
+                                            <textarea id="add-comment"
+                                                      type="text" [(ngModel)]="comment"
+                                                      class="form-control" name="comment">
+                                            </textarea>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="col-sm-offset-2 col-sm-10">
+                                            <button (click)="onAddComment()"
+                                                     class="btn comment-btn"
+                                                     data-dismiss="modal">Add coment</button>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                     </div>
+                </div>
   </div>
 </div>
