--- a/src/app/authentication/register/register.component.html
+++ b/src/app/authentication/register/register.component.html
@@ -19,13 +19,13 @@
                                         formControlName="username" />
                             </div>
 
-                            <div class="col-md-10">
-                                <span
-                                   *ngIf="(userForm.controls['username'].errors &&
-                                          (userForm.controls['username'].dirty  ||
-                                           userForm.controls['username'].touched)) ||
-                                           userForm.controls['username'].errors && mouseover">
-                                       Please enter valid username
+                            <div class="col-md-10" *ngIf="userForm.controls['username'].errors &&
+                                         userForm.controls['username'].dirty">
+                                <span *ngIf="userForm.controls['username'].hasError('required')">
+                                       Username is required
+                                </span>
+                                <span *ngIf="userForm.controls['username'].hasError('pattern')">
+                                       Invalid Username
                                 </span>
                            </div>
                         </div>
@@ -43,13 +43,13 @@
                                         formControlName="firstName" />
                             </div>
 
-                            <div class="col-md-10">
-                                <span
-                                   *ngIf="(userForm.controls['firstName'].errors &&
-                                          (userForm.controls['firstName'].dirty  ||
-                                          userForm.controls['firstName'].touched)) ||
-                                          userForm.controls['firstName'].errors && mouseover">
-                                       Please enter valid first name
+                            <div class="col-md-10" *ngIf="userForm.controls['firstName'].errors &&
+                                         userForm.controls['firstName'].dirty">
+                                <span *ngIf="userForm.controls['firstName'].hasError('required')">
+                                       First Name is required
+                                </span>
+                                <span *ngIf="userForm.controls['firstName'].hasError('pattern')">
+                                       Invalid First Name
                                 </span>
                            </div>
                         </div>
@@ -67,13 +67,13 @@
                                         formControlName="lastName" />
                             </div>
 
-                            <div class="col-md-10">
-                                <span
-                                   *ngIf="(userForm.controls['lastName'].errors &&
-                                          (userForm.controls['lastName'].dirty  ||
-                                          userForm.controls['lastName'].touched)) ||
-                                          userForm.controls['lastName'].errors && mouseover">
-                                       Please enter valid last name
+                            <div class="col-md-10" *ngIf="userForm.controls['lastName'].errors &&
+                                         userForm.controls['lastName'].dirty">
+                                <span *ngIf="userForm.controls['lastName'].hasError('required')">
+                                       Last Name is required
+                                </span>
+                                <span *ngIf="userForm.controls['lastName'].hasError('pattern')">
+                                       Invalid Last Name
                                 </span>
                            </div>
                         </div>
@@ -91,13 +91,13 @@
                                         formControlName="email" />
                             </div>
 
-                            <div class="col-md-10">
-                                <span
-                                   *ngIf="(userForm.controls['email'].errors &&
-                                          (userForm.controls['email'].dirty  ||
-                                          userForm.controls['email'].touched)) ||
-                                          userForm.controls['email'].errors && mouseover">
-                                       Please enter valid email
+                            <div class="col-md-10" *ngIf="userForm.controls['email'].errors &&
+                                         userForm.controls['email'].dirty">
+                                <span *ngIf="userForm.controls['email'].hasError('required')">
+                                       Email is required
+                                </span>
+                                <span *ngIf="userForm.controls['email'].hasError('pattern')">
+                                       Invalid Email
                                 </span>
                            </div>
                         </div>
@@ -115,24 +115,15 @@
                                         formControlName="password" />
                             </div>
 
-                            <div class="col-md-10">
-                                <span
-                                   *ngIf="(userForm.controls['password'].errors &&
-                                          (userForm.controls['password'].dirty  ||
-                                          userForm.controls['password'].touched)) ||
-                                          userForm.controls['password'].errors && mouseover">
-                                       Please enter valid password
+                            <div class="col-md-10" *ngIf="userForm.controls['password'].errors &&
+                                         userForm.controls['password'].dirty">
+                                <span *ngIf="userForm.controls['password'].hasError('required')">
+                                       Password is required
                                 </span>
-                           </div>
-                        </div>
-
-                        <div class="checkbox">
-                            <label class="small">
-                                <input name="terms"
-                                       class = "checkbox-testing"
-                                       type="checkbox"> I have read and agree to the
-                                       <a href="#">terms of service</a>
-                            </label>
+                                <span *ngIf="userForm.controls['password'].hasError('pattern')">
+                                       Invalid Password
+                                </span>
+                            </div>
                         </div>
 
                         <input
