--- a/src/app/users/edit-profile/edit-profile.component.html
+++ b/src/app/users/edit-profile/edit-profile.component.html
@@ -1,6 +1,6 @@
 <main>
     <div class="container" style="padding-top: 60px;">
-        <h1 class="page-header">
+        <h1 class="page-header text-center">
           Edit Your Profile
         </h1>
         <form class="row" (ngSubmit)="onSubmit()" #editProfileForm=ngForm>
@@ -24,18 +24,12 @@
 
                 <div>
                     <div class="form-group">
-                        <label class="col-lg-3 control-label">Username</label>
-                        <div class="col-lg-8">
-                            <input required class="form-control"
-                                   [(ngModel)]="user.username" name="username"
-                                   value="{{this.user.username}}" type="text" name="username">
-                        </div>
-                    </div>
-
-                    <div class="form-group">
                         <label class="col-lg-3 control-label">First Name</label>
                         <div class="col-lg-8">
-                            <input required class="form-control"
+                            <input required
+                                   minlength="3"
+                                   maxlength="30"
+                                   class="form-control"
                                    [(ngModel)]="user.firstName" name="firstName"
                                    value="{{this.user.firstName}}" type="text" name="firstName">
                         </div>
@@ -44,10 +38,24 @@
                     <div class="form-group">
                         <label class="col-lg-3 control-label">Last Name</label>
                         <div class="col-lg-8">
-                            <input required class="form-control"
+                            <input required
+                                   minlength="3"
+                                   maxlength="30"
+                                   class="form-control"
                                    [(ngModel)]="user.lastName" name="lastName"
                                    value="{{this.user.lastName}}" type="text" name="lastName">
                         </div>
+                    </div>
+
+                    <div class="form-group">
+                      <label class="col-lg-3 control-label">Email</label>
+                      <div class="col-lg-8">
+                          <input required
+                                 pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$"
+                                 class="form-control"
+                                 [(ngModel)]="user.email" name="email"
+                                 value="{{this.user.email}}" type="text" name="email">
+                      </div>
                     </div>
 
                     <div class="form-group">
