--- a/src/app/users/user-detail/user-detail.component.css
+++ b/src/app/users/user-detail/user-detail.component.css
@@ -11,8 +11,12 @@
 }
 
 .media .media-body p {
-  padding: 0 15px;
-  font-size: 14px;
+  margin-right: 100px;
+  margin-left: 2px;
+  border: 5px solid white;
+  border-width: 5px;
+  font-size: 15px;
+  font-family: cursive;
 }
 
 .media .media-body h4 {
@@ -22,4 +26,8 @@
   margin-bottom: 0;
   padding-left: 14px;
   margin-top: 12px;
+}
+
+p {
+  font-family:verdana;
 }
