--- a/src/app/users/users-all/users-all.component.css
+++ b/src/app/users/users-all/users-all.component.css
@@ -5,3 +5,21 @@
 .text-center {
   margin-left: 450px;
 }
+
+main {
+  margin-top: 2%;
+  padding-top: 10rem;
+  padding-bottom: 32rem;
+  background-image: url("../../../assets/imgs/solar-energy-2157212_1280.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+main h1 {
+  margin-left: 450px;
+}
