Updated admin module

--- a/src/app/admin/moderator-details/moderator-details.component.html
+++ b/src/app/admin/moderator-details/moderator-details.component.html
@@ -3,7 +3,7 @@
       <img class="rounded-circle" src="{{moderator.profilePictureUrl}}">
   </div>
   <div class="media-body">
-      <h4 class="text-center">Username: {{moderator.username}}</h4>
+      <p class="text-center">Username: {{moderator.username}}</p>
       <br>
       <p class="text-center">Full name: {{moderator | fullName}}</p>
       <p class="text-center">Email: {{moderator.email}}</p>
