--- a/src/app/admin/edit-moderator/edit-moderator.component.css
+++ b/src/app/admin/edit-moderator/edit-moderator.component.css
@@ -1,3 +1,29 @@
 main {
-  margin-top: 5%;
+  margin-top: 3%;
+  padding-top: 5rem;
+  padding-bottom: 12rem;
+  background-image: url("../../../assets/imgs/paper-3146953_1280.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+h1 {
+  margin-left: 110px;
+}
+
+h3 {
+  margin-left: 150px;
+}
+
+h6 {
+  margin-top: 14rem;
+}
+
+div .col-md-4 col-sm-6 col-xs-12 {
+  margin-top: 200px;
 }
