--- a/src/app/admin/moderator-details/moderator-details.component.css
+++ b/src/app/admin/moderator-details/moderator-details.component.css
@@ -11,36 +11,20 @@
 }
 
 .media .media-body p {
-  padding: 0 15px;
-  font-size: 14px;
+  margin-right: 100px;
+  margin-left: 2px;
+  border: 5px solid white;
+  border-width: 5px;
+  font-size: 15px;
+  font-family: cursive;
 }
 
-.media .media-body h4 {
-  color: red;
-  font-size: 18px;
-  font-weight: 600;
-  margin-bottom: 0;
-  margin-right: 150px;
-  padding-left: 5px;
-  margin-top: 12px;
-}
-
-.media .media-body p {
-  color: royalblue;
-  font-size: 18px;
-  font-weight: 600;
-  margin-bottom: 0;
-  margin-right: 120px;
-  padding-left: 5px;
-  margin-top: 12px;
-}
 
 .btn-warning {
-  position: relative;
   color: white;
   background-color: orange;
   width: 100px;
-  margin-left: 400px;
+  margin-left: 290px;
   margin-bottom: 30px;
 }
 
@@ -49,6 +33,6 @@
   color: white;
   background-color: red;
   width: 100px;
-  margin-left: 400px;
+  margin-left: 290px;
   margin-bottom: 30px;
 }
