--- a/src/app/moderator/add-student-to-course/add-student-to-course.component.css
+++ b/src/app/moderator/add-student-to-course/add-student-to-course.component.css
@@ -5,3 +5,17 @@
 .text-center {
   margin-left: 450px;
 }
+
+main {
+  margin-top: 3%;
+  padding-top: 10rem;
+  padding-bottom: 32rem;
+  background-image: url("../../../assets/imgs/cup-of-coffee-1280537_1280.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-attachment: fixed;
+}
