--- a/src/app/shared/components/course-detail/course-detail.component.html
+++ b/src/app/shared/components/course-detail/course-detail.component.html
@@ -24,63 +24,12 @@
               </ul>
           </div>
       </div>
+      <input [routerLink]="['/moderator/courses', course.id]"
+              class="btn btn-lg btn-warning btn-link" value="View course details" type="submit">
 
       <input [routerLink]="['/moderator/students', course.id]"
              class="btn btn-lg btn-warning btn-link" value="Add Student" type="submit">
       <input [routerLink]="['/moderator/lecturers', course.id]"
              class="btn btn-lg btn-warning btn-link" value="Add Lecturer" type="submit">
-
-      <ul>
-        <li *ngFor="let student of course.students">
-            <p>Username of the student: {{student.username}}</p>
-            <input [routerLink]="['/moderator/courses', course.id, student.id]"
-             class="btn btn-lg btn-warning btn-link" value="Add mark for the student" type="submit">
-        </li>
-      </ul>
-
-      <input [routerLink]="['/student/homeworks', course.id]"
-             class="btn btn-lg btn-warning btn-link" value="Add Homework" type="submit">
-
-
-             <button *ngIf="isUserLogged" class="btn comment-btn"
-                data-toggle="modal" data-target="#myModalHorizontal">Add comment</button>
-
-                <div class="modal fade" id="myModalHorizontal" tabindex="-1" role="dialog"
-                     aria-labelledby="myModalLabel" aria-hidden="true">
-                     <div class="modal-dialog">
-                        <div class="modal-content">
-
-                            <div class="modal-header">
-                                <button type="button" class="close" data-dismiss="modal">
-                                    <span aria-hidden="true">&times;</span>
-                                    <span class="sr-only">Close</span>
-                                </button>
-                                <h4 class="modal-title" id="myModalLabel">
-                                    Commment:
-                                </h4>
-                            </div>
-
-                            <div class="modal-body">
-                                <form class="form-horizontal" role="form">
-                                    <div class="form-group">
-                                        <div class="col-sm-10">
-                                            <textarea id="add-comment"
-                                                      type="text" [(ngModel)]="comment"
-                                                      class="form-control" name="comment">
-                                            </textarea>
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <div class="col-sm-offset-2 col-sm-10">
-                                            <button (click)="onAddComment()"
-                                                     class="btn comment-btn"
-                                                     data-dismiss="modal">Add coment</button>
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                     </div>
-                </div>
   </div>
 </div>
