--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -77,6 +77,10 @@
                         </a>
                       </li>
                       <li>
+                        <a class="dropdown-item" [routerLink]="['/user/courses/required']">Req Courses
+                        </a>
+                      </li>
+                      <li>
                           <a class="dropdown-item" [routerLink]="[ '/auth/logout'] ">Logout
                           </a>
                       </li>
