Updated moderator module

--- a/src/app/moderator/add-course/add-course.component.html
+++ b/src/app/moderator/add-course/add-course.component.html
@@ -63,7 +63,7 @@
                              </span>
                              <input class="form-control"
                                       type="number"
-                                      placeholder="Max places in course (required)"
+                                      placeholder="max places (required)"
                                       formControlName="maxPlacesInCourse" />
                           </div>
 
@@ -87,7 +87,7 @@
                              </span>
                              <input class="form-control"
                                       type="number"
-                                      placeholder="available Places In Course (required)"
+                                      placeholder="available places (required)"
                                       formControlName="availablePlacesInCourse" />
                           </div>
 
@@ -109,10 +109,12 @@
                               <span class="input-group-addon">
                                 <i class="fa fa-lock fa-lg" aria-hidden="true"></i>
                              </span>
+                             <label for="requreidCourse">Is required?</label>
                              <input class="form-control"
                                       type="checkbox"
-                                      placeholder="isRequired (required)"
+                                      id="requiredCourse"
                                       formControlName="isRequired" />
+                            <br>
                           </div>
 
                           <div class="col-md-10">
