--- a/src/app/moderator/all-optional-courses/all-optional-courses.component.html
+++ b/src/app/moderator/all-optional-courses/all-optional-courses.component.html
@@ -1,10 +1,9 @@
-<div class="container">
-  <main>
+<main>
       <section class="row-section">
           <div class="container">
               <div class="row">
                   <h1 class="text-center">
-                      <i class="fa fa-user fa-2x" aria-hidden="true"></i> Students
+                      <i class="fa fa-archive" aria-hidden="true"></i> Optional Courses
                   </h1>
               </div>
               <div class="col-md-10 offset-md-1 row-block">
@@ -24,4 +23,3 @@
           </div>
       </section>
  </main>
-</div>
