--- a/src/app/moderator/all-required-courses/all-required-courses.component.css
+++ b/src/app/moderator/all-required-courses/all-required-courses.component.css
@@ -5,3 +5,21 @@
 .text-center {
   margin-left: 450px;
 }
+
+main {
+  margin-top: 3%;
+  padding-top: 10rem;
+  padding-bottom: 32rem;
+  background-image: url("../../../assets/imgs/computer-1231889_1280.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+main h1 {
+  color: white;
+}
