--- a/src/app/shared/components/course-detail/course-detail.component.css
+++ b/src/app/shared/components/course-detail/course-detail.component.css
@@ -19,6 +19,7 @@
   margin-right: 150px;
   padding-left: 5px;
   margin-top: 12px;
+  margin-left: 100px;
 }
 
 .media .media-body p {
@@ -29,4 +30,13 @@
   margin-right: 120px;
   padding-left: 5px;
   margin-top: 12px;
+  margin-left: 100px;
+}
+
+.media .media-body input {
+  margin-left: 150px;
+}
+
+.media {
+  background-color: blanchedalmond;
 }
