--- a/src/app/shared/components/course-detail/course-detail.component.html
+++ b/src/app/shared/components/course-detail/course-detail.component.html
@@ -3,29 +3,7 @@
       <h4 class="text-center">Name: {{course.name}}</h4>
       <br>
       <p class="text-center">Credits: {{course.credits}}</p>
-      <p class="text-center">Max places in course: {{course.maxPlacesInCourse}}</p>
-
-      <div *ngIf="course.comments" class="comments-container-div">
-          <div class="comments-container">
-              <h3>Comments:</h3>
-              <ul id="comments-list" class="comments-list" *ngFor="let comment of course.comments">
-                  <li>
-                      <div class="comment-main-level">
-                          <div class="comment-avatar"><img src="{{comment.authorPictureUrl}}" alt=""></div>
-                          <div class="comment-box">
-                              <div class="comment-head">
-                                  <h6 class="comment-name by-author">{{comment.author}}</h6>
-                                  <i class="fa fa-comment"></i>
-                              </div>
-                              <div class="comment-content">{{comment.text}}</div>
-                          </div>
-                      </div>
-                  </li>
-              </ul>
-          </div>
-      </div>
-      <input [routerLink]="['/moderator/courses', course.id]"
-              class="btn btn-lg btn-warning btn-link" value="View course details" type="submit">
+      <p class="text-center"> Available places: {{course.availablePlacesInCourse}}</p>
 
       <input [routerLink]="['/moderator/students', course.id]"
              class="btn btn-lg btn-warning btn-link" value="Add Student" type="submit">
