Updated homework adding

--- a/src/app/users/all-required-courses/all-required-courses.component.html
+++ b/src/app/users/all-required-courses/all-required-courses.component.html
@@ -10,6 +10,9 @@
                   <div class="panel-body">
                       <a [routerLink]="['/user/courses/', course._id]"> Course Details</a>
                   </div>
+                  <div class="panel-body">
+                    <a [routerLink]="['/student/homeworks/', course._id]"> Add Homework</a>
+                  </div>
                   <div class="panel-footer card-block">
                       <h5><a href="#" class="a" title="Image">{{course.name}}</a></h5>
                       <p class="a">
